<resources>
    <string name="app_name">First_App</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likeIcon">Like button</string>
    <string name="description_commentsIcon">Comment button</string>
    <string name="description_shareIcon">Share button</string>
    <string name="description_watchIcon">Watch Icon</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_save_the_changes">Save the changes</string>
    <string name="description_cancel_the_changes">Cancel the changes</string>
    <string name="cancel">Cancel the changes</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_view_link">Open link</string>
    <string name="save">save</string>
    <string name="link">Link</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_posted">User %1$s published a new post: %2$s</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="no_posts">No posts</string>
    <string name="update_posts_button">update Posts Button</string>
    <string name="new_posts">New Posts</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_authorization">Menu Authorization</string>
    <string name="Login">Your login</string>
    <string name="password">Password</string>
    <string name="sign_in_to_proceed">Sign in to proceed</string>
    <string name="no_thank_you">No, thank you</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="your_name">Your name</string>
    <string name="remove_photo">Remove photo</string>
    <string name="ad_description">ad</string>


</resources>