<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.CardPostFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"
        android:scrollbarSize="1dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageView
        android:id="@+id/attachmentImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/barrierMiddle"
        app:layout_constraintBottom_toTopOf="@id/videoLinkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- android:layout_height="wrap_content"  - НЕ РАБОТАЕТ ??-->


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="videoLink, play" />

    <ImageButton
        android:id="@+id/videoLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:src="@drawable/ic_youtube_seeklogo_com"
        app:layout_constraintBottom_toTopOf="@id/videoLinkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierMiddle" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="@id/videoLink"
        app:layout_constraintEnd_toEndOf="@id/videoLink"
        app:layout_constraintStart_toStartOf="@id/videoLink"
        app:layout_constraintTop_toTopOf="@id/videoLink" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="videoLinkText, linkSave" />

    <EditText
        android:id="@+id/videoLinkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="Your video link"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/linkSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save_check_24"
        app:layout_constraintBottom_toBottomOf="@id/videoLinkText"
        app:layout_constraintEnd_toEndOf="@id/videoLinkText"
        app:layout_constraintTop_toTopOf="@id/videoLinkText" />


    <!--   Reactions    -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesIcon"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/description_likeIcon"
        app:layout_constraintEnd_toStartOf="@id/shareIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierBottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareIcon"
        style="@style/Widget.AppTheme.ShareAndViewButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/description_shareIcon"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likesIcon"
        app:layout_constraintStart_toEndOf="@id/likesIcon"
        app:layout_constraintTop_toTopOf="@id/likesIcon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/linkIcon"
        style="@style/Widget.AppTheme.ShareAndViewButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/link"
        app:icon="@drawable/ic_add_link_24"
        app:layout_constraintBottom_toBottomOf="@id/likesIcon"
        app:layout_constraintStart_toEndOf="@id/shareIcon"
        app:layout_constraintTop_toTopOf="@id/likesIcon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewIcon"
        style="@style/Widget.AppTheme.ShareAndViewButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/description_watchIcon"
        app:icon="@drawable/ic_eye_24"
        app:layout_constraintBottom_toBottomOf="@id/likesIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likesIcon" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="likesIcon, shareIcon, viewIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>